--- a/.env.sample
+++ b/.env.sample
@@ -95,6 +95,15 @@ OIDC_DISPLAY_NAME=OpenID
 OIDC_SCOPES="openid profile email"
 
 
+# LDAP config
+ACTIVE_DIRECTORY_URL=
+ACTIVE_DIRECTORY_BIND_DN=
+ACTIVE_DIRECTORY_BIND_CREDENTIALS=
+ACTIVE_DIRECTORY_SEARCH_BASE=
+ACTIVE_DIRECTORY_SEARCH_FILTER=
+ACTIVE_DIRECTORY_SEARCH_ATTRIBUTES=
+
+
 # –––––––––––––––– OPTIONAL ––––––––––––––––
 
 # Base64 encoded private key and certificate for HTTPS termination. This is only
