--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "oy-vey": "^0.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
+    "passport-ldapauth": "^3.0.1",
     "passport-oauth2": "^1.6.1",
     "passport-slack-oauth2": "^1.1.0",
     "pg": "^8.5.1",
